[workspace]
resolver = "2"

members = ["library", "2023/day_01", "2023/day_02", "2023/day_03", "2023/day_04", "2023/day_05", "2023/day_06", "2023/day_07", "2023/day_08", "2023/day_09", "2023/day_10", "2023/day_11", "2023/day_12", "2023/day_13", "2023/day_14", "2023/day_15", "2023/day_16", "2023/day_17", "2023/day_18", "2023/day_19", "2023/day_20", "2023/day_21"]
